# pyfigure

./: .gitignore  README.md  config.py  parsers.py  pyproject.toml  readme.md  setup.py  test.py  test.toml
.github/workflows/: pypi.yml  tests.yml
pyfigure/: __init__.py
src/pyfigure/: __init__.py  parsers.py
tests/: test_config.py
